--- a/tesis/package.json
+++ b/tesis/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@mui/material": "^6.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2",
+    "react-scripts": "^3.0.1",
+    "styled-components": "^6.1.13",
+    "sweetalert2": "^11.6.13",
+    "tesis": "file:"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
